--- a/src/styles/info.css
+++ b/src/styles/info.css
@@ -4,9 +4,13 @@
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size: 20px;
     align-items: center;
+    margin: 10px 20px 0 20px;
+    padding: 0;
+    border-radius: 10px;
+    box-shadow: 5px;
 }
 input {
-    width: 500px;
+    width: 18rem;
     height: 25px;
     border: 2px solid black;
 }
